Bug 1911486: Leave DragSession connected to BrowserChild while sending dragend  a=diannaS

During EndDragSession and the dispatch of the dragend event in a content process
(e.g. in an extension), accessing the event's dataTransfer didn't work because
the session was already disconnected from the BrowserChild.  This broke things
like tab dragging from web-extension-based tabbars.  This leaves the drag
session in place until after EndDragSession is done.  It also makes the
reciprocal change to InvokeDragSession.

Original Revision: https://phabricator.services.mozilla.com/D218667

Differential Revision: https://phabricator.services.mozilla.com/D221177